--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,10 @@
     <h1>Calculator</h1>
     <div class="Calculator">
         <div class="first-row">
-            <div class = "screen"></div>
+            <div class = "screen">
+                <div class="previous"></div>
+                <div class="current"></div>
+            </div>
             <button class="btn clear">C</button>
         </div>
         <div class="other-rows">
